[gd_scene load_steps=6 format=3 uid="uid://d1o52f55ub4qm"]

[ext_resource type="Script" path="res://scripts/table.gd" id="1_0jurv"]
[ext_resource type="Texture2D" uid="uid://cbmgas5f1uie5" path="res://art/table.png" id="2_mddhc"]
[ext_resource type="Texture2D" uid="uid://cvl5g1jfm44md" path="res://art/roll_dice_button.png" id="3_lqvaw"]
[ext_resource type="Texture2D" uid="uid://cx6uwgxgqybvg" path="res://art/keep_score_button.png" id="4_g4kqc"]
[ext_resource type="Texture2D" uid="uid://cr8vus0nkyqw1" path="res://art/hot_dice.png" id="5_76pr5"]

[node name="Table" type="Node2D"]
script = ExtResource("1_0jurv")

[node name="Table" type="Sprite2D" parent="."]
position = Vector2(641, 358.5)
scale = Vector2(1.11478, 1.10308)
texture = ExtResource("2_mddhc")

[node name="NumPlayersSpinBox" type="SpinBox" parent="."]
visible = false
offset_left = 70.0
offset_top = 113.0
offset_right = 153.062
offset_bottom = 144.0
min_value = 2.0
max_value = 4.0
value = 2.0

[node name="DiceLabel" type="Label" parent="."]
offset_left = 279.0
offset_top = 327.0
offset_right = 353.0
offset_bottom = 350.0
scale = Vector2(2, 2)
text = "dice"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentPlayerLabel" type="Label" parent="."]
offset_left = 6.0
offset_top = 43.0
offset_right = 126.0
offset_bottom = 79.0
scale = Vector2(2, 2)
text = "Current player:"
horizontal_alignment = 2

[node name="TurnScoreLabel" type="Label" parent="."]
offset_left = 391.0
offset_top = 182.0
offset_right = 475.0
offset_bottom = 205.0
scale = Vector2(2, 2)
text = "turn score:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="AvailableDiceLabel" type="Label" parent="."]
offset_left = 392.0
offset_top = 612.0
offset_right = 497.0
offset_bottom = 635.0
scale = Vector2(2, 2)
text = "available dice"

[node name="ScoresLabel" type="Label" parent="."]
offset_left = 764.0
offset_top = 29.0
offset_right = 814.0
offset_bottom = 52.0
scale = Vector2(2, 2)
text = "scores"

[node name="ThrowButton" type="Button" parent="."]
offset_left = 865.0
offset_top = 546.0
offset_right = 973.0
offset_bottom = 654.0
icon = ExtResource("3_lqvaw")

[node name="KeepScoreButton" type="Button" parent="."]
offset_left = 977.0
offset_top = 545.0
offset_right = 1085.0
offset_bottom = 653.0
icon = ExtResource("4_g4kqc")

[node name="NeedMorePoints" type="RichTextLabel" parent="."]
offset_left = 364.0
offset_top = 506.0
offset_right = 552.0
offset_bottom = 582.0
scale = Vector2(2, 2)
text = "You need 750 points to get on the score board!"

[node name="HotDiceSprite" type="Sprite2D" parent="."]
position = Vector2(1086, 278)
scale = Vector2(1.57333, 1.42949)
texture = ExtResource("5_76pr5")

[node name="DiePosition1" type="Node2D" parent="."]
position = Vector2(467, 341)

[node name="DiePosition2" type="Node2D" parent="."]
position = Vector2(511, 424)

[node name="DiePosition3" type="Node2D" parent="."]
position = Vector2(573, 336)

[node name="DiePosition4" type="Node2D" parent="."]
position = Vector2(625, 427)

[node name="DiePosition5" type="Node2D" parent="."]
position = Vector2(682, 338)

[node name="DiePosition6" type="Node2D" parent="."]
position = Vector2(751, 431)
